# gpt-anywhere

./: README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  window.rs
src/components/: CopyButton.tsx  ErrorBox.tsx  ResponseBox.tsx  Search.tsx  Titlebar.tsx  UnauthorizedErrorBox.tsx
src/pages/: App.tsx  Help.tsx  Settings.tsx
src/util/: ai.ts  consts.tsx  llm.ts  markdown.tsx
