[package]
name = "omni-query"
version = "1.0.0"
description = "OpenAI and Anthropic LLMs when you need them"
authors = ["JinayJain", "tomasmcm"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = ["clipboard-all", "global-shortcut-all", "macos-private-api", "shell-open", "system-tray", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-always-on-top", "window-set-focus", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
